# obsidian-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
docs/semantic-runtime/: README.md  manifest-v1.md  protocol-v1.md
src/: config.rs  error.rs  lib.rs  main.rs  models.rs  test_helpers.rs
src/client/: mod.rs  semantic_daemon.rs
src/daemon/: bootstrap.rs  home.rs  indexer.rs  manifest.rs  mod.rs  protocol.rs  query.rs  server.rs  vault_context.rs  vault_registry.rs  watcher.rs
src/tools/: graph.rs  metadata.rs  mod.rs  navigation.rs  notes.rs  periodic.rs  search.rs  utility.rs
src/vault/: embeddings.rs  exclude.rs  frontmatter.rs  fs.rs  index.rs  mod.rs  parser.rs  patch.rs  path.rs  periodic.rs  search_utils.rs  tantivy_index.rs  watcher.rs  wikilink.rs
tests/: daemon_integration_tests.rs  integration_tests.rs
tests/common/: daemon_test_utils.rs  mod.rs
tests/fixtures/test_vault/: broken-links.md  orphan.md
tests/fixtures/test_vault/.obsidian/: daily-notes.json
tests/fixtures/test_vault/Daily/: 2026-03-19.md
tests/fixtures/test_vault/Notes/: getting-started.md
tests/fixtures/test_vault/Notes/deep/: nested-note.md
tests/fixtures/test_vault/Projects/: python-tools.md  rust-mcp.md
