[package]
name = "obsidian-mcp"
version = "0.3.1"
edition = "2024"
description = "MCP server for Obsidian vaults — direct filesystem access for AI agents"
license = "MIT"
repository = "https://github.com/lstpsche/obsidian-mcp"
keywords = ["mcp", "obsidian", "vault", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1.0"
pulldown-cmark = "0.12"
notify = "7"
notify-debouncer-mini = "0.5"
walkdir = "2"
globset = "0.4"
regex = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tantivy = "0.22"
fastembed = { version = "5", optional = true }
bincode = { version = "2", optional = true, features = ["serde"] }

[features]
default = []
embeddings = ["dep:fastembed", "dep:bincode"]

[dev-dependencies]
tempfile = "3"
