[package]
name = "obsidian-mcp"
version = "1.0.2"
edition = "2024"
description = "MCP server for Obsidian vaults — direct filesystem access for AI agents"
license = "MIT"
repository = "https://github.com/lstpsche/obsidian-mcp"
keywords = ["mcp", "obsidian", "vault", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "yaml_serde", version = "0.10" }
schemars = "1.0"
pulldown-cmark = "0.13"
notify = "8"
notify-debouncer-mini = "0.7"
walkdir = "2"
globset = "0.4"
regex = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tantivy = "0.25"
fastembed = { version = "5", optional = true }
bincode = { version = "2", optional = true, features = ["serde"] }
fs2 = "0.4"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
flate2 = "1"
tar = ">=0.4.45, <0.5"
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
default = []
embeddings = ["dep:fastembed", "dep:bincode"]

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "obsidian-mcp"
path = "src/main.rs"

[[bin]]
name = "obsidian-semanticd"
path = "src/bin/obsidian-semanticd.rs"
